# Django-Multi-Tenant

./: .gitignore  README.md  pyproject.toml  tenant_context_manage.py
config/: settings.py  urls.py
config/middleware/: middlewares.py
polls/: admin.py  models.py  serializers.py  views.py
polls/migrations/: 0001_initial.py  0002_auto_20210904_1241.py  0003_alter_poll_question.py  0004_auto_20210920_0407.py  0005_poll_references.py
tenants/: admin.py  backends.py  login.py  models.py  router.py  utils.py  views.py
tenants/management/commands/: createsuperuser_tenant.py  makemigrations_schemas.py  migrate_schemas.py
tenants/middleware/: middlewares.py
tenants/migrations/: 0001_initial.py  0002_tenant_age.py  0003_alter_tenant_age.py  0004_alter_tenant_age.py  0005_tenant_gender.py
